# wsl-file-organizer

./: .gitignore  README.md  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  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.pub  organize.py  pyproject.toml
dotfile_manager/: .bashrc  .gitconfig  dotfile_manager.py
src/wsl_file_organizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/wsl_tools/: __init__.py
terminal_dashboard/: dashboard.py
